--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -82,7 +82,7 @@
       </form>
 
       <p style="margin-top: 10px; text-align: center">
-        <a href="{% url 'registration:login_html' %}">Back to homepage</a>
+        <a href="{% url 'homepage' %}">Back to homepage</a>
       </p>
     </div>
   </body>
